--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,63 @@
 
 body {
   margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.sidebar {
+  background-color: rgb(48, 157, 190);
+  padding: 1em;
+  color: white;
+}
+
+.sidebar__logo {
+  display: flex;
+  align-items: center;
+}
+
+.sidebar__logo > img {
+  flex: 1;
+  max-height: 50px;
+}
+
+.sidebar__logo > p {
+  flex: 3;
+  font-size: 1.5rem;
+  margin-left: 1em;
+}
+
+.sidebar > ul {
+  margin-top: 2.5em;
+}
+
+.sidebar > ul > li {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.sidebar > ul > li > img {
+  max-height: 30px;
+}
+
+.sidebar > ul > li + li {
+  margin-top: 1em;
 }
