--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ header {
 .search > input {
   border: none;
   border-radius: 1em;
-  background-color: #e8f0ed;
+  background-color: #e2e8f0;
   width: 100%;
   padding: 0.5em;
 }
@@ -151,4 +151,59 @@ header {
   color: white;
   padding: 0.5em 1em;
   cursor: pointer;
+}
+
+.content {
+  background-color: #e2e8f0;
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  gap: 1em;
+}
+
+.content > section {
+  border: 1px solid #000;
+}
+
+.projects {
+  grid-row: span 2;
+  padding: 1em;
+}
+
+.projects > .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 1em;
+}
+
+.projects > h2 {
+  font-size: 1rem;
+}
+
+.projects > .cards > .card {
+  background-color: white;
+  border-radius: 8px;
+  border-left: 5px solid #f0b429;
+  padding: 1.5em 1em;
+}
+
+.card__heading {
+  font-weight: bold;
+  margin: 0;
+}
+
+.card__desc {
+  opacity: 0.9;
+  margin: 0;
+}
+
+.card__icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1em;
+  margin: 1em;
+}
+
+.trending {
+  grid-column: 2;
 }
