--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ header {
   display: grid;
   grid-template-columns: 4fr 2fr;
   grid-template-rows: 2;
+  border-bottom: 3px solid rgb(211, 210, 210);
 }
 
 .search {
@@ -153,11 +154,14 @@ header {
   cursor: pointer;
 }
 
+/* content  */
+
 .content {
   background-color: #e2e8f0;
   display: grid;
   grid-template-columns: 5fr 2fr;
-  gap: 1em;
+  align-items: start;
+  align-content: start;
 }
 
 .projects {
@@ -167,7 +171,7 @@ header {
 
 .projects > .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1em;
 }
 
@@ -182,6 +186,7 @@ header {
   border-radius: 8px;
   border-left: 5px solid #f0b429;
   padding: 1.5em 1em;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
 .card__heading {
@@ -206,15 +211,17 @@ header {
   max-width: 50px;
 }
 
-.announcements {
-  padding: 1em;
-  padding-left: 0;
+.announcements,
+.trending {
+  padding: 1em 1em 1em 0.1em;
 }
 
-.announcements > ul {
+.announcements > ul,
+.trending > ul {
   background-color: white;
   padding: 1em 1.5em;
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
 .announcements > ul > li {
@@ -238,4 +245,35 @@ header {
 
 .trending {
   grid-column: 2;
+  margin-top: 0;
+}
+
+.trending > ul > li + li {
+  margin-top: 1em;
+}
+
+.trending > ul > li {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.trending > ul > li > img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.trending > ul > li > div > * {
+  margin: 0;
+}
+
+.trending > ul > li > div > p:first-child {
+  font-weight: 500;
+}
+
+.trending > ul > li > div > p:nth-child(2) {
+  opacity: 0.9;
+  font-size: 0.9rem;
 }
