styles: Add mobile responsiveness

--- a/styles.css
+++ b/styles.css
@@ -332,8 +332,32 @@ header {
 }
 
 @media (max-width: 768px) {
+  body {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
   body > aside {
     display: none;
+  }
+
+  header {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  header > .status {
+    display: none;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .announcements,
+  .trending {
+    margin: 1em;
   }
 }
 
