--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,10 @@ a {
 
 .sidebar > ul {
   margin-top: 2.5em;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 1em;
+  z-index: 1;
 }
 
 .sidebar > ul > li {
