fix: Make both lists sticky

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,9 @@ a {
   background-color: var(--sdbr-bg-clr);
   padding: 1em;
   color: var(--sdbr-txt-clr);
+  position: sticky;
+  top: 1em;
+  z-index: 1;
 }
 
 .sidebar__logo {
@@ -72,31 +75,33 @@ a {
   font-weight: bold;
 }
 
-.sidebar > ul {
-  margin-top: 2.5em;
+.sidebar .lists {
   position: -webkit-sticky;
   position: sticky;
   top: 1em;
-  z-index: 1;
 }
 
-.sidebar > ul > li {
+.sidebar > .lists > ul {
+  margin-top: 2.5em;
+}
+
+.sidebar > .lists > ul > li {
   display: flex;
   align-items: center;
   gap: 1em;
   cursor: pointer;
 }
 
-.sidebar > ul > li > svg {
+.sidebar .lists > ul > li > svg {
   max-height: 25px;
   fill: var(--sdbr-svg-fill);
 }
 
-.sidebar > ul > li > span {
+.sidebar .lists > ul > li > span {
   font-weight: 500;
 }
 
-.sidebar > ul > li + li {
+.sidebar .lists > ul > li + li {
   margin-top: 1em;
 }
 
